--- a/build.gradle
+++ b/build.gradle
@@ -37,9 +37,9 @@ apply plugin: 'maven-publish'
 // ! 1. VERSION
 version = '1.16.4-1.0.0' // format: minecraftVersion-modVersion
 // ! 2. PACKAGE
-group = 'org.<username>.<modid>' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'org.sharo.scp040jp' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 // ! 3. MODID
-archivesBaseName = '<modid>'
+archivesBaseName = 'scp040jp'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
@@ -51,6 +51,7 @@ tasks.withType(Jar) {
 }
 
 minecraft {
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     mappings channel: 'snapshot', version: '20201028-1.16.3'
     runs {
         client {
@@ -98,7 +99,7 @@ configurations {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.4-35.1.7'
+    minecraft 'net.minecraftforge:forge:1.16.4-35.1.12'
     // ? kotlin
     embed 'org.jetbrains.kotlin:kotlin-stdlib:1.4.10'
     compile 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10'
@@ -109,14 +110,14 @@ jar {
     manifest {
         attributes([
             // ! 4. MODID
-            "Specification-Title": "<modid>",
+            "Specification-Title": "scp040jp",
             // ! 5. USERNAME
-            "Specification-Vendor": "<username>",
+            "Specification-Vendor": "sharo_jef",
             "Specification-Version": "1",
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             // ! 6. USERNAME
-            "Implementation-Vendor" :"<username>",
+            "Implementation-Vendor" :"sharo_jef",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
