--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,9 +1,9 @@
 # Access Transformer
 # LAND_TRANSFORMING_STRUCTURES
-# public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_
+public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_
 # DEFAULT_STRUCTURE_CONFIGS
-# public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_
+public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_
 # STRUCTURES
-# public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j
+public-f net.minecraft.world.gen.FlatGenerationSettings field_202247_j
 # structures
-# public-f net.minecraft.world.gen.settings.DimensionStructuresSettings *
+public-f net.minecraft.world.gen.settings.DimensionStructuresSettings *
